ProcessBuilder implementation for bash executions